--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
             margin: 0 15px;
             color: white;
             font-size: 24px;
+            text-decoration: none;
+        }
+        .social-links img {
+            transition: transform 0.3s ease;
+        }
+        .social-links img:hover {
+            transform: scale(1.1);
         }
         @media (max-width: 768px) {
             .hero h1 {
@@ -190,7 +197,7 @@
     <section id="about" class="container">
         <h2 class="section-title">关于13D DAO</h2>
         <div class="card">
-            <p>13D DAO是一个去中心化自治组织，通过发行治理代币13D实现社区治理。我们计划将12个核心项目与代币经济深度绑定，构建万亿美元市值的去中心化生态系统。</p>
+            <p>13D DAO是一个去中心化自治组织，通过发行治理代币13D实现社区治理。我们计划将13个核心项目与代币经济深度绑定，构建万亿美元市值的去中心化生态系统。</p>
             <p>我们的愿景是打破传统金融垄断，通过无中心化存储、去中心化自治和AI金融技术，实现真正的金融平权。</p>
         </div>
     </section>
@@ -310,9 +317,15 @@
         <div class="card">
             <p>欢迎加入13D DAO社区，参与去中心化未来建设。</p>
             <div class="social-links">
-                <a href="https://discord.gg/8tpzQwfU" target="_blank">Discord</a>
-                <a href="https://x.com/pei_hai20167?t=hWIk2HYrqWH_wrflNeZjdQ&s=09" target="_blank">Twitter(X)</a>
-                <a href="https://t.me/+XrHa7ZedFAUyYTc1" target="_blank">Telegram</a>
+                <a href="https://discord.gg/8tpzQwfU" target="_blank">
+                    <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord" width="40">
+                </a>
+                <a href="https://x.com/pei_hai20167?t=hWIk2HYrqWH_wrflNeZjdQ&s=09" target="_blank">
+                    <img src="https://abs.twimg.com/favicons/twitter.3.ico" alt="Twitter(X)" width="40">
+                </a>
+                <a href="https://t.me/+XrHa7ZedFAUyYTc1" target="_blank">
+                    <img src="https://telegram.org/img/t_logo.png" alt="Telegram" width="40">
+                </a>
             </div>
             <p>持有13D代币即成为13D DAO治理成员，参与生态建设与决策。</p>
         </div>
